# svg2gif

./: README.md  pyproject.toml
svg2gif/: main.py
